removed app/app dir

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ build/Release
 # Dependency directory
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
+app/app
 app/node_modules
 app/bower_components
 
