--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
     "passport-linkedin-oauth2": "^1.1.1",
     "passport-local": "^1.0.0",
     "q": "^1.0.1",
-    "request": "^2.40.0"
+    "request": "^2.40.0",
+    "serve-favicon": "^2.1.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
