--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@ build/Release
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 app/app
-app/node_modules
-app/bower_components
+node_modules
+bower_components
 
 # Config files
 config.js
