--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
       "callbackURL": "https://startupcommunity-c9-jgentes.c9.io/auth/linkedin/callback"
     },
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "path": "/home/ubuntu/workspace/app"
+    "path": "/app"
   },
   "production": {
     "db": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
@@ -17,6 +17,6 @@
       "callbackURL": "https://startupcommunity-c9-jgentes.c9.io/auth/linkedin/callback"
     },
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "path": "/home/ubuntu/workspace/dist"
+    "path": "/dist"
   }
 }
