--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "time-grunt": "~0.2.1"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "0.10.x"
   },
   "scripts": {
     "test": "grunt test"
