--- a/config.json
+++ b/config.json
@@ -9,6 +9,16 @@
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
     "path": "/app"
   },
+  "theme": {
+    "db": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
+    "linkedin": {
+      "clientID": "75s9q8uelaanvf",
+      "clientSecret": "kus8etN9TWmgJBba",
+      "callbackURL": "https://startupcommunity-c9-jgentes.c9.io/auth/linkedin/callback"
+    },
+    "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
+    "path": "/theme"
+  },
   "production": {
     "db": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
     "linkedin": {
