--- a/bower.json
+++ b/bower.json
@@ -20,30 +20,31 @@
     "google-code-prettify": "1.0.1",
     "jquery-validation": "*",
     "jquery.inputmask": "3.0.0",
-    "angular-ui-select2": "0.0.5"
+    "angular-ui-select2": "0.0.5",
+    "angulartics": "~0.16.5"
   },
-  "olddependencies": {    
+  "olddependencies": {
     "seiyria-bootstrap-slider": "~1.9.0",
-    "morris.js": "~0.5.0",    
+    "morris.js": "~0.5.0",
     "jquery.slimscroll": "~1.3.1",
     "jquery.easing": "~1.3.0",
     "flot": "~0.8.2",
     "flot.tooltip": "*",
     "angular-ui-tree": "~2.0.3",
     "jqvmap": "*",
-    "angular-toggle-switch": "~0.3.0",    
-    "angular-xeditable": "0.1.8",    
-    "iCheck": "1.0.2",    
-    "bootbox.js": "https://github.com/makeusabrew/bootbox.git#4.2.0",        
+    "angular-toggle-switch": "~0.3.0",
+    "angular-xeditable": "0.1.8",
+    "iCheck": "1.0.2",
+    "bootbox.js": "https://github.com/makeusabrew/bootbox.git#4.2.0",
     "stepy": "*",
     "gmaps": "0.4.13",
-    "bootstrap-daterangepicker": "1.3.7",    
+    "bootstrap-daterangepicker": "1.3.7",
     "Chart.js": "1.0.1-beta.2",
     "jquery.pulsate": "*",
     "jquery.knob": "https://github.com/aterrien/jQuery-Knob.git#1.2.9",
     "jquery.sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
     "ng-flow": "2.4.0",
-    "jScrollPane": "https://github.com/vitch/jScrollPane.git#2.0.14",    
+    "jScrollPane": "https://github.com/vitch/jScrollPane.git#2.0.14",
     "shufflejs": "2.1.1"
   },
   "resolutions": {
@@ -53,7 +54,7 @@
     "twbs-bootstrap-sass": "~3.1.1",
     "responsive-tables": "*"
   },
-  "overrides": {        
+  "overrides": {
     "bootstrap": {
       "main": "dist/js/bootstrap.js"
     }
@@ -83,7 +84,7 @@
       ]
     },
     "iCheck": {
-        "main": "icheck.min.js"
+      "main": "icheck.min.js"
     },
     "flot": {
       "main": [
