--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "passport-linkedin-oauth2": "^1.1.1",
     "passport-local": "^1.0.0",
     "q": "^1.0.1",
-    "request": "^2.40.0",
-    "serve-favicon": "^2.1.1"
+    "request": "^2.40.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
