--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
       "callbackURL": "https://startupcommunity-c9-jgentes.c9.io/auth/linkedin/callback"
     },
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "path": "/app"
+    "path": "/app",
+    "api_base_url": "https://startupcommunity-c9-jgentes.c9.io"
   },
   "theme": {
     "db": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
@@ -17,9 +18,10 @@
       "callbackURL": "https://startupcommunity-c9-jgentes.c9.io/auth/linkedin/callback"
     },
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "path": "/theme"
+    "path": "/theme",
+    "api_base_url": "https://startupcommunity-c9-jgentes.c9.io"
   },
-  "production": {
+  "test": {
     "db": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
     "linkedin": {
       "clientID": "75s9q8uelaanvf",
@@ -27,6 +29,18 @@
       "callbackURL": "https://startupcommunity-c9-jgentes.c9.io/auth/linkedin/callback"
     },
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
-    "path": "/dist"
+    "path": "/dist",
+    "api_base_url": "https://startupcommunity-c9-jgentes.c9.io"
+  },
+  "production": {
+    "db": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
+    "linkedin": {
+      "clientID": "75s9q8uelaanvf",
+      "clientSecret": "kus8etN9TWmgJBba",
+      "callbackURL": "https://startupcommunity.org/auth/linkedin/callback"
+    },
+    "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
+    "path": "/dist",
+    "api_base_url": "https://startupcommunity.org"
   }
 }
