--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.6.5",
     "express": "^4.8.5",
     "express-session": "^1.7.6",
+    "jsonwebtoken": "^1.1.1",
     "mailchimp-api": "^2.0.6",
     "method-override": "^2.1.3",
     "morgan": "^1.2.3",
