--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bcryptjs": "^0.7.12",
     "body-parser": "^1.6.5",
+    "cookie-parser": "^1.3.3",
     "express": "^4.8.5",
     "express-session": "^1.7.6",
     "jsonwebtoken": "^1.1.1",
