--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "jquery.inputmask": "3.0.0",
     "angular-ui-select2": "0.0.5",
     "iCheck": "1.0.2",
-    "angulartics": "0.16.3"
+    "angulartics": "0.16.3",
+    "satellizer": "~0.6.3"
   },
   "olddependencies": {
     "seiyria-bootstrap-slider": "~1.9.0",
@@ -85,7 +86,7 @@
         "jqvmap/maps/jquery.vmap.usa.js",
         "jqvmap/data/jquery.vmap.sampledata.js"
       ]
-    },    
+    },
     "flot": {
       "main": [
         "jquery.flot.js",
@@ -122,6 +123,6 @@
         "./script/jquery.jscrollpane.min.js",
         "./style/jquery.jscrollpane.css"
       ]
-    }    
+    }
   }
 }
