--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "satellizer": "^0.6.3"
   },
   "devDependencies": {
+    "debug-trace": "^0.2.3",
     "grunt": "~0.4.1",
     "grunt-angular-templates": "^0.5.5",
     "grunt-autoprefixer": "~0.4.0",
