--- a/config.json
+++ b/config.json
@@ -8,7 +8,12 @@
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
     "path": "/app",
-    "api_base_url": "https://startupcommunity-c9-jgentes.c9.io"
+    "api_base_url": "https://startupcommunity-c9-jgentes.c9.io",
+    "opbeat": {
+      "organizationId": "adf86d959a464b28a1df269d2e7ba468",
+      "appId": "1cd1fc4b40",
+      "secretToken": "8c34c1bec488f932ca1bd4dedc3de98ab6c66d3d"
+    }
   },
   "theme": {
     "db": "95bd29ce-e6a9-48b1-888e-780c74d1ef3a",
@@ -30,7 +35,12 @@
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
     "path": "/dist",
-    "api_base_url": "https://startupcommunity-c9-jgentes.c9.io"
+    "api_base_url": "https://startupcommunity-c9-jgentes.c9.io",
+    "opbeat": {
+      "organizationId": "adf86d959a464b28a1df269d2e7ba468",
+      "appId": "1cd1fc4b40",
+      "secretToken": "8c34c1bec488f932ca1bd4dedc3de98ab6c66d3d"
+    }
   },
   "production": {
     "db": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
@@ -41,6 +51,11 @@
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
     "path": "/dist",
-    "api_base_url": "https://startupcommunity.org"
+    "api_base_url": "https://startupcommunity.org",
+    "opbeat": {
+      "organizationId": "adf86d959a464b28a1df269d2e7ba468",
+      "appId": "1cd1fc4b40",
+      "secretToken": "8c34c1bec488f932ca1bd4dedc3de98ab6c66d3d"
+    }
   }
 }
