--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "method-override": "^2.1.3",
     "moment": "^2.8.3",
     "morgan": "^1.2.3",
+    "opbeat": "^1.0.2",
     "orchestrate": "^0.3.4",
     "q": "^1.0.1",
     "request": "^2.40.0",
