--- a/bower.json
+++ b/bower.json
@@ -39,14 +39,14 @@
     "angular-xeditable": "0.1.8",
     "bootbox.js": "https://github.com/makeusabrew/bootbox.git#4.2.0",
     "gmaps": "0.4.13",
-    "bootstrap-daterangepicker": "1.3.7",
     "Chart.js": "1.0.1-beta.2",
     "jquery.pulsate": "*",
     "jquery.knob": "https://github.com/aterrien/jQuery-Knob.git#1.2.9",
     "jquery.sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
     "ng-flow": "2.4.0",
     "jScrollPane": "https://github.com/vitch/jScrollPane.git#2.0.14",
-    "shufflejs": "2.1.1"
+    "shufflejs": "2.1.1",
+    "pnotify": "sciactive/pnotify#~2.0.1"
   },
   "resolutions": {
     "jquery": "~1.11.0",
@@ -71,7 +71,8 @@
         "ui/jquery.ui.core.js",
         "ui/jquery.ui.widget.js",
         "ui/jquery.ui.mouse.js",
-        "ui/jquery.ui.draggable.js"
+        "ui/jquery.ui.draggable.js",
+        "ui/jquery.ui.resizable.js"
       ]
     },
     "select2": {
@@ -82,6 +83,16 @@
         "select2x2.png",
         "select2-spinner.gif"
       ]
+    },
+    "angulartics": {
+      "main": [
+        "src/angulartics.js",
+        "src/angulartics-segmentio.js"
+      ],
+      "dependencies": {
+        "angular": ">= 1.1.5",
+        "SHA-1": "*"
+      }
     }
   },
   "oldoverrides": {
