--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "jquery.easing": "~1.3.0",
     "angular-ui-select2": "0.0.5",
     "iCheck": "1.0.2",
+    "angulartics": "~0.17.1",
     "satellizer": "~0.6.3",
     "stepy": "*",
     "moment": "~2.8.3"
@@ -65,15 +66,6 @@
     },
     "stepy": {
       "main": "lib/jquery.stepy.js"
-    },
-    "jquery.ui": {
-      "main": [
-        "ui/jquery.ui.core.js",
-        "ui/jquery.ui.widget.js",
-        "ui/jquery.ui.mouse.js",
-        "ui/jquery.ui.draggable.js",
-        "ui/jquery.ui.resizable.js"
-      ]
     },
     "select2": {
       "main": [
