--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "angular-toggle-switch": "1.0.0",
     "enquire": "2.1.1",
     "jquery-validation": "*",
-    "jquery.inputmask": "3.0.0",    
+    "jquery.inputmask": "3.0.0",
     "jquery.slimscroll": "~1.3.1",
     "jScrollPane": "https://github.com/vitch/jScrollPane.git#2.0.14",
     "jquery.easing": "~1.3.0",
@@ -44,18 +44,20 @@
     "jquery.pulsate": "*",
     "jquery.knob": "https://github.com/aterrien/jQuery-Knob.git#1.2.9",
     "jquery.sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
-    "ng-flow": "2.4.0",    
+    "ng-flow": "2.4.0",
     "shufflejs": "2.1.1",
     "pnotify": "sciactive/pnotify#~2.0.1"
   },
   "resolutions": {
     "jquery": "~1.11.0",
     "angulartics": "~0.17.1",
-    "angular-toggle-switch": "1.0.0"
+    "angular-toggle-switch": "1.0.0",
+    "angular": "1.3.3"
   },
   "devDependencies": {
     "twbs-bootstrap-sass": "~3.1.1",
-    "responsive-tables": "*"
+    "responsive-tables": "*",
+    "angular-mocks": "~1.3.3"
   },
   "overrides": {
     "bootstrap": {
