--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "request": "^2.40.0",
     "satellizer": "^0.8.3"
   },
-  "devDependencies": {
+  "devDependencies": {    
+    "angular-mocks": "^1.3.3",
     "debug-trace": "^0.2.3",
     "grunt": "~0.4.1",
     "grunt-angular-templates": "^0.5.5",
