--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "request": "^2.40.0",
     "satellizer": "^0.8.3"
   },
-  "devDependencies": {    
+  "devDependencies": {
     "angular-mocks": "^1.3.3",
     "debug-trace": "^0.2.3",
     "grunt": "~0.4.1",
@@ -51,6 +51,7 @@
     "karma-ng-html2js-preprocessor": "^0.1.0",
     "karma-ng-scenario": "^0.1.0",
     "load-grunt-tasks": "~0.4.0",
+    "phantomjs": "^1.9.12",
     "time-grunt": "~0.2.1"
   },
   "engines": {
