--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
       "clientSecret": "C5zHpSLjV4uNFUM1"
     },
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
+    "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
     "path": "/app",
     "api_base_url": "https://startupcommunity-c9-jgentes.c9.io"
@@ -17,6 +18,7 @@
       "clientSecret": "C5zHpSLjV4uNFUM1"
     },
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
+    "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
     "path": "/theme",
     "api_base_url": "https://startupcommunity-c9-jgentes.c9.io"
@@ -28,6 +30,7 @@
       "clientSecret": "C5zHpSLjV4uNFUM1"
     },
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
+    "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
     "path": "/dist",
     "api_base_url": "https://startupcommunity-c9-jgentes.c9.io",
@@ -44,6 +47,7 @@
       "clientSecret": "C5zHpSLjV4uNFUM1"
     },
     "token_secret": "2l3knfgqlkn2fvkl23nvklgnvkg23bhva08",
+    "API_token_secret": "2lknvqk32nvqknv3qlkvn3kvln234lknvqS",
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
     "path": "/dist",
     "api_base_url": "https://startupcommunity.org",
