--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "karma-ng-scenario": "^0.1.0",
     "load-grunt-tasks": "~0.4.0",
     "phantomjs": "^1.9.12",
+    "request-debug": "^0.1.1",
     "time-grunt": "~0.2.1"
   },
   "engines": {
