--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-karma": "^0.8.3",
     "grunt-ngmin": "~0.0.2",
     "grunt-processhtml": "^0.3.3",
+    "grunt-protractor-webdriver": "^0.1.9",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
@@ -52,6 +53,7 @@
     "karma-ng-scenario": "^0.1.0",
     "load-grunt-tasks": "~0.4.0",
     "phantomjs": "^1.9.12",
+    "protractor": "^1.4.0",
     "request-debug": "^0.1.1",
     "time-grunt": "~0.2.1"
   },
