--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "grunt-karma": "^0.8.3",
     "grunt-ngmin": "~0.0.2",
     "grunt-processhtml": "^0.3.3",
-    "grunt-protractor-webdriver": "^0.1.9",
+    "grunt-protractor-runner": "^1.1.4",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
