--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.8.5",
     "jwt-simple": "^0.2.0",
     "mailchimp-api": "^2.0.6",
+    "mandrill-api": "^1.0.41",
     "method-override": "^2.1.3",
     "moment": "^2.8.3",
     "morgan": "^1.2.3",
