--- a/bower.json
+++ b/bower.json
@@ -26,11 +26,11 @@
     "jquery.easing": "~1.3.0",
     "angular-ui-select2": "0.0.5",
     "iCheck": "1.0.2",
-    "angulartics": "~0.17.1",
     "satellizer": "~0.6.3",
     "stepy": "*",
     "moment": "~2.8.3",
-    "es5-shim": "~4.0.3"
+    "es5-shim": "~4.0.3",
+    "angular-segmentio": "~1.0.0"
   },
   "olddependencies": {
     "seiyria-bootstrap-slider": "~1.9.0",
