--- a/bower.json
+++ b/bower.json
@@ -51,10 +51,10 @@
     "raphael": "~2.1.2"
   },
   "resolutions": {
-    "jquery": "~1.11.0",
+    "jquery": ">= 1.9.1",
     "angulartics": "~0.17.1",
     "angular-toggle-switch": "1.0.0",
-    "angular": "1.3.3",
+    "angular": "~1.3.2",
     "es5-shim": "2.3.0",
     "enquire": "2.1.1",
     "ng-grid": "2.0.11"
