good staging setup

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,9 @@
 deployment:
   production:
-    branch: master
+    branch: staging
     commands:
       - ./build.sh
+      - git add . -A
+      - git commit -am "Push staging to master"      
       - git push git@heroku.com:startupcommunity.git $CIRCLE_SHA1:master
+      - git push jgentes@github.com:startupcommunity.git $CIRCLE_SHA1:master
