added dev to circleci

--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,14 @@
 deployment:
+  dev:
+    branch: dev
+    commands:
+      - ./build.sh
+      - git config --global user.email "james@thesocialbusiness.com"
+      - git config --global user.name "James Gentes"
+      - git add . -A
+      - git commit -am "Push dev to dev"      
+      - git push git@heroku.com:startupcommunity-dev.git $CIRCLE_SHA1:master
+      - git push git@github.com:jgentes/startupcommunity.git $CIRCLE_SHA1:dev
   production:
     branch: staging
     commands:
