everything good for API and betaTour push

--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ deployment:
       - git config --global user.email "james@thesocialbusiness.com"
       - git config --global user.name "James Gentes"
       - git add . -A
-      - git commit -am "Push dev to dev"      
+      - git commit -am "Push dev branch to sc-dev:master"      
       - git push git@heroku.com:startupcommunity-dev.git $CIRCLE_SHA1:master
       - git push git@github.com:jgentes/startupcommunity.git $CIRCLE_SHA1:dev
   production:
@@ -16,6 +16,6 @@ deployment:
       - git config --global user.email "james@thesocialbusiness.com"
       - git config --global user.name "James Gentes"
       - git add . -A
-      - git commit -am "Push staging to master"      
+      - git commit -am "Push staging to production master"      
       - git push git@heroku.com:startupcommunity.git $CIRCLE_SHA1:master
       - git push git@github.com:jgentes/startupcommunity.git $CIRCLE_SHA1:master
