--- a/config.json
+++ b/config.json
@@ -48,12 +48,7 @@
     "mailchimp": "4cd1eb319ae631eb57ef642b9340af68-us9",
     "mandrill": "JDkgsI2Q5La5kGVPXCOrFg",
     "path": "/dist",
-    "api_base_url": "https://startupcommunity-c9-jgentes.c9.io",
-    "opbeat": {
-      "organizationId": "adf86d959a464b28a1df269d2e7ba468",
-      "appId": "1cd1fc4b40",
-      "secretToken": "8c34c1bec488f932ca1bd4dedc3de98ab6c66d3d"
-    }
+    "api_base_url": "https://startupcommunity-c9-jgentes.c9.io"
   },
   "production": {
     "db": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
