--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "description": "Kickstart the entrpeneurial ecosystem in your city",
   "main": "server.js",
   "dependencies": {
-    "bcryptjs": "^0.7.12",
-    "body-parser": "^1.6.5",
-    "debug-trace": "^0.2.3",
-    "express": "^4.8.5",
-    "jwt-simple": "^0.2.0",
-    "mailchimp-api": "^2.0.6",
-    "mandrill-api": "^1.0.41",
-    "method-override": "^2.1.3",
-    "moment": "^2.8.3",
-    "morgan": "^1.2.3",
-    "opbeat": "^1.0.2",
-    "orchestrate": "^0.3.4",
-    "q": "^1.0.1",
-    "request": "^2.40.0",
-    "satellizer": "^0.8.5"
+    "bcryptjs": "~0.7.12",
+    "body-parser": "~1.6.5",
+    "debug-trace": "~0.2.3",
+    "express": "~4.8.5",
+    "jwt-simple": "~0.2.0",
+    "mailchimp-api": "~2.0.6",
+    "mandrill-api": "~1.0.41",
+    "method-override": "~2.1.3",
+    "moment": "~2.8.3",
+    "morgan": "~1.2.3",
+    "opbeat": "~1.0.2",
+    "orchestrate": "~0.3.4",
+    "q": "~1.0.1",
+    "request": "~2.40.0",
+    "satellizer": "~0.8.5"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.3",
+    "angular-mocks": "~1.3.3",
     "grunt": "~0.4.1",
-    "grunt-angular-templates": "^0.5.5",
+    "grunt-angular-templates": "~0.5.5",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-bower-install": "~1.0.0",
     "grunt-concurrent": "~0.5.0",
@@ -36,25 +36,25 @@
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-jshint": "~0.7.1",
-    "grunt-contrib-less": "^0.11.3",
+    "grunt-contrib-less": "~0.11.3",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-google-cdn": "~0.2.0",
-    "grunt-karma": "^0.8.3",
+    "grunt-karma": "~0.8.3",
     "grunt-ngmin": "~0.0.2",
-    "grunt-processhtml": "^0.3.3",
-    "grunt-protractor-runner": "^1.1.4",
+    "grunt-processhtml": "~0.3.3",
+    "grunt-protractor-runner": "~1.1.4",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "^0.1.5",
-    "karma-ng-html2js-preprocessor": "^0.1.0",
-    "karma-ng-scenario": "^0.1.0",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-jasmine": "~0.1.5",
+    "karma-ng-html2js-preprocessor": "~0.1.0",
+    "karma-ng-scenario": "~0.1.0",
     "load-grunt-tasks": "~0.4.0",
-    "protractor": "^1.4.0",
-    "request-debug": "^0.1.1",
+    "protractor": "~1.4.0",
+    "request-debug": "~0.1.1",
     "time-grunt": "~0.2.1"
   },
   "engines": {
