--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,7 @@ deployment:
       - git config --global user.name "James Gentes"
       - git add . -A
       - git commit -am "Push dev branch to sc-dev:master"      
-      - git push git@heroku.com:startupcommunity-dev.git $CIRCLE_SHA1:master
+      - git push git@heroku.com:startupcommunity-dev.git $CIRCLE_SHA1:master --force
       - git push git@github.com:jgentes/startupcommunity.git $CIRCLE_SHA1:dev
   production:
     branch: staging
