--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,7 @@
     "enquire": "~2.1.2",
     "jquery-validation": "*",
     "jquery.inputmask": "3.0.0",
-    "jquery.slimscroll": "~1.3.1",
-    "jScrollPane": "https://github.com/vitch/jScrollPane.git#2.0.14",
+    "jquery.slimscroll": "~1.3.1",    
     "jquery.easing": "~1.3.0",
     "angular-ui-select2": "0.0.5",
     "iCheck": "1.0.2",
@@ -43,6 +42,7 @@
     "gmaps": "0.4.13",
     "Chart.js": "1.0.1-beta.2",
     "jquery.pulsate": "*",
+    "jScrollPane": "https://github.com/vitch/jScrollPane.git#2.0.14",
     "jquery.knob": "https://github.com/aterrien/jQuery-Knob.git#1.2.9",
     "jquery.sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
     "ng-flow": "2.4.0",
@@ -87,8 +87,17 @@
         "angular-toggle-switch.min.js",
         "angular-toggle-switch.css"
       ]
+    },
+    "jquery.ui": {
+      "main": [
+        "ui/jquery.ui.core.js",
+        "ui/jquery.ui.widget.js",
+        "ui/jquery.ui.mouse.js",
+        "ui/jquery.ui.draggable.js",
+        "ui/jquery.ui.resizable.js"
+      ]
     }
-  },
+  },  
   "oldoverrides": {
     "jquery.knob": {
       "name": "aterrien/jQuery-Knob"
