--- a/circle.yml
+++ b/circle.yml
@@ -16,5 +16,5 @@ deployment:
       - git config --global user.name "James Gentes"
       - git add . -A
       - git commit -am "Push staging to production master"      
-      - git push git@heroku.com:startupcommunity.git $CIRCLE_SHA1:master
-      - git push git@github.com:jgentes/startupcommunity.git $CIRCLE_SHA1:master
+      - git push git@heroku.com:startupcommunity.git master
+      - git push git@github.com:jgentes/startupcommunity.git master
