--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-route": "~1.3.3",
     "angular-animate": "~1.3.2",
     "font-awesome": "~4.0.3",
-    "angular-bootstrap": "0.11.2",    
+    "angular-bootstrap": "0.11.2",
     "ng-grid": "~2.0.14",
     "jquery-autosize": "~1.18.15",
     "angular-toggle-switch": "1.0.0",
@@ -20,7 +20,7 @@
     "enquire": "~2.1.2",
     "jquery-validation": "*",
     "jquery.inputmask": "3.0.0",
-    "jquery.slimscroll": "~1.3.1",    
+    "jquery.slimscroll": "~1.3.1",
     "jquery.easing": "~1.3.0",
     "angular-ui-select2": "0.0.5",
     "iCheck": "1.0.2",
@@ -28,7 +28,8 @@
     "stepy": "*",
     "moment": "~2.8.3",
     "es5-shim": "~4.0.3",
-    "angular-segmentio": "~1.0.0"
+    "angular-segmentio": "~1.0.0",
+    "angular-ui-utils": "bower-highlight"
   },
   "olddependencies": {
     "seiyria-bootstrap-slider": "~1.9.0",
@@ -56,7 +57,8 @@
     "angular": "~1.3.2",
     "es5-shim": "2.3.0",
     "enquire": "2.1.1",
-    "ng-grid": "2.0.11"
+    "ng-grid": "2.0.11",
+    "angular-ui-utils": "bower-highlight"
   },
   "devDependencies": {
     "twbs-bootstrap-sass": "~3.1.1",
@@ -88,7 +90,7 @@
         "angular-toggle-switch.css"
       ]
     }
-  },  
+  },
   "oldoverrides": {
     "jquery.knob": {
       "name": "aterrien/jQuery-Knob"
@@ -101,7 +103,7 @@
         "jqvmap/maps/jquery.vmap.usa.js",
         "jqvmap/data/jquery.vmap.sampledata.js"
       ]
-    },    
+    },
     "jquery.ui": {
       "main": [
         "ui/jquery.ui.core.js",
