--- a/bower.json
+++ b/bower.json
@@ -18,14 +18,14 @@
     "angular-toggle-switch": "1.0.0",
     "bootbox.js": "https://github.com/makeusabrew/bootbox.git#4.3.0",
     "enquire": "~2.1.2",
-    "jquery-validation": "*",
+    "jquery-validation": "~1.13.1",
     "jquery.inputmask": "3.0.0",
     "jquery.slimscroll": "~1.3.1",
     "jquery.easing": "~1.3.0",
     "angular-ui-select2": "0.0.5",
     "iCheck": "1.0.2",
     "satellizer": "~0.6.3",
-    "stepy": "*",
+    "stepy": "https://github.com/wbotelhos/stepy.git",
     "moment": "~2.8.3",
     "es5-shim": "~4.0.3",
     "angular-segmentio": "~1.0.0",
