--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "method-override": "~2.1.3",
     "moment": "~2.8.3",
     "morgan": "~1.2.3",
+    "nodalytics": "^1.1.0",
     "opbeat": "~1.0.2",
     "orchestrate": "~0.3.4",
     "q": "~1.0.1",
@@ -50,7 +51,7 @@
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.4.0",
-    "protractor": "~1.4.0",    
+    "protractor": "~1.4.0",
     "time-grunt": "~0.2.1"
   },
   "engines": {
