--- a/bower.json
+++ b/bower.json
@@ -28,8 +28,9 @@
     "moment": "~2.8.3",
     "es5-shim": "~4.0.3",
     "angular-ui-utils": "bower-highlight",
-    "angulartics": "~0.17.1",
-    "satellizer": "~0.9.2"
+    "satellizer": "~0.9.2",
+    "angular-mixpanel": "~1.0.0",
+    "mixpanel": "~2.2.0"
   },
   "olddependencies": {
     "seiyria-bootstrap-slider": "~1.9.0",
@@ -58,7 +59,8 @@
     "es5-shim": "2.3.0",
     "enquire": "2.1.1",
     "ng-grid": "2.0.11",
-    "angular-ui-utils": "bower-highlight"
+    "angular-ui-utils": "bower-highlight",
+    "angular-mocks": "~1.3.3"
   },
   "devDependencies": {
     "twbs-bootstrap-sass": "~3.1.1",
@@ -71,17 +73,6 @@
     },
     "iCheck": {
       "main": "icheck.min.js"
-    },
-    "angulartics": {
-      "main": [
-        "src/angulartics.js",
-        "src/angulartics-ga.js",
-        "src/angulartics-mixpanel.js"
-      ],
-      "dependencies": {
-        "angular": ">= 1.1.5",
-        "SHA-1": "*"
-      }
     },
     "stepy": {
       "main": "lib/jquery.stepy.js"
