--- a/bower.json
+++ b/bower.json
@@ -29,8 +29,7 @@
     "es5-shim": "~4.0.3",
     "angular-ui-utils": "bower-highlight",
     "satellizer": "~0.9.2",
-    "angular-mixpanel": "~1.0.0",
-    "mixpanel": "~2.2.0"
+    "angular-mixpanel": "~1.0.0"
   },
   "olddependencies": {
     "seiyria-bootstrap-slider": "~1.9.0",
