--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.3.3",
+    "bower": "^1.3.12",
     "grunt": "~0.4.1",
     "grunt-angular-templates": "~0.5.5",
     "grunt-autoprefixer": "~0.4.0",
@@ -58,6 +59,7 @@
     "node": "0.10.x"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
