--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "es5-shim": "~4.0.3",
     "angular-ui-utils": "bower-highlight",
     "satellizer": "~0.9.2",
-    "angular-mixpanel": "~1.0.0"
+    "angular-mixpanel": "~1.0.0",
+    "mixpanel": "~2.4.1"
   },
   "olddependencies": {
     "seiyria-bootstrap-slider": "~1.9.0",
@@ -54,7 +55,8 @@
   "resolutions": {
     "jquery": ">= 1.9.1",
     "angular": "~1.3.2",
-    "angular-mocks": "~1.3.3"
+    "angular-mocks": "~1.3.3",
+    "mixpanel": "~2.4.1"
   },
   "devDependencies": {
     "twbs-bootstrap-sass": "~3.1.1",
