updated circle with master push to prod

--- a/circle.yml
+++ b/circle.yml
@@ -16,3 +16,7 @@ deployment:
     branch: dev
     heroku:
       appname: startupcommunity-dev
+  production:
+    branch: master
+    heroku:
+      appname: startupcommunity
