--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.3.3",
+    "basic-auth": "^1.0.0",
     "bower": "^1.3.12",
     "grunt": "~0.4.1",
     "grunt-angular-templates": "~0.5.5",
