--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "q": "~1.0.1",
     "request": "~2.40.0",
     "request-debug": "~0.1.1",
-    "satellizer": "^0.9.0"
+    "satellizer": "~0.9.0",
+    "basic-auth": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.3",
-    "basic-auth": "^1.0.0",
-    "bower": "^1.3.12",
+    "bower": "~1.3.12",
     "grunt": "~0.4.1",
     "grunt-angular-templates": "~0.5.5",
     "grunt-autoprefixer": "~0.4.0",
