--- a/circle.yml
+++ b/circle.yml
@@ -20,3 +20,7 @@ deployment:
     branch: master
     heroku:
       appname: startupcommunity
+
+test:
+  post:
+    - protractor test/protractor.conf.js
