--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.4.0",
+    "newrelic": "^1.18.0",
     "protractor": "~1.4.0",
     "time-grunt": "~0.2.1"
   },
