--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "Kickstart the entrpeneurial ecosystem in your city",
   "main": "server.js",
   "dependencies": {
-    "basic-auth": "~1.0.0",
     "bcryptjs": "~0.7.12",
     "body-parser": "~1.6.5",
     "debug-trace": "~0.2.3",
@@ -24,7 +23,8 @@
     "q": "~1.0.1",
     "request": "~2.40.0",
     "request-debug": "~0.1.1",
-    "satellizer": "~0.9.0"
+    "satellizer": "~0.9.0",
+    "connect-wwwhisper": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.3",
@@ -64,6 +64,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "bower install"
   }
 }
