--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bcryptjs": "~0.7.12",
     "body-parser": "~1.6.5",
+    "connect-wwwhisper": "*",
     "debug-trace": "~0.2.3",
     "express": "~4.8.5",
     "express-sslify": "^0.1.1",
@@ -18,13 +19,13 @@
     "method-override": "~2.1.3",
     "moment": "~2.8.3",
     "morgan": "~1.2.3",
+    "newrelic": "^1.18.0",
     "nodalytics": "^1.1.0",
     "orchestrate": "~0.3.4",
     "q": "~1.0.1",
     "request": "~2.40.0",
     "request-debug": "~0.1.1",
-    "satellizer": "~0.9.0",
-    "connect-wwwhisper": "*"
+    "satellizer": "~0.9.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.3",
