--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "debug-trace": "~0.2.3",
     "express": "~4.8.5",
     "express-sslify": "^0.1.1",
-    "ghost": "^0.6.0",
+    "ghost": "^0.6.1",
     "http-proxy": "^1.9.0",
     "jwt-simple": "~0.2.0",
     "mailchimp-api": "~2.0.6",
@@ -26,7 +26,6 @@
     "request": "~2.40.0",
     "request-debug": "~0.1.1",
     "satellizer": "~0.9.0",
-    "newrelic": "^1.18.0",
     "connect-wwwhisper": "*"
   },
   "devDependencies": {
@@ -62,7 +61,7 @@
     "time-grunt": "~0.2.1"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "0.12.2"
   },
   "scripts": {
     "test": "grunt test",
