--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "request": "~2.40.0",
     "request-debug": "~0.1.1",
     "satellizer": "~0.9.0",
-    "connect-wwwhisper": "*"
+    "connect-wwwhisper": "0.1.11"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.3",
