--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "underscore": "~1.5.2",
     "jquery": "~1.11.0",
-    "angular": "~1.3.2",
+    "angular": "1.3.2",
     "angular-resource": "~1.3.2",
     "angular-cookies": "~1.3.2",
     "angular-sanitize": "~1.3.2",
@@ -53,7 +53,7 @@
     "raphael": "~2.1.2"
   },
   "resolutions": {
-    "angular": "~1.3.2",
+    "angular": "1.3.2",
     "mixpanel": "~2.4.2"
   },
   "devDependencies": {
