--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,10 @@
     "angular-ui-router": "~0.2.12",
     "angular-bootstrap": "~0.12.0",
     "jquery": "~2.1.3",
+    "iCheck": "~1.0.2",
+    "sweetalert": "https://github.com/t4t5/sweetalert.git#~0.2.1",
+    "angular-notify": "~2.0.2",
+    "sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
     "bootstrap": "~3.3.0",
     "fontawesome": "~4.3.0",
     "metisMenu": "~1.1.2",
