--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "es5-shim": "~4.0.3",
     "angular-ui-utils": "bower-highlight",
     "mixpanel": "~2.5.1",
-    "angular-mixpanel": "~1.1.0"
+    "angular-mixpanel": "~1.1.0",
+    "angular-google-maps": "~2.1.3"
   },
   "resolutions": {
     "angular": "1.4.0",
