--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "StartupCommunity.org - Kickstart your city's entrepreneurial ecosystem",
   "private": true,
   "dependencies": {
-    "grunt": "^0.4.5",
     "bcryptjs": "~0.7.12",
     "body-parser": "~1.6.5",
+    "connect-wwwhisper": "0.1.11",
     "debug-trace": "~0.2.3",
     "express": "~4.8.5",
     "express-sslify": "^0.1.1",
     "ghost": "^0.6.4",
+    "grunt": "^0.4.5",
     "http-proxy": "^1.9.0",
     "jwt-simple": "~0.2.0",
     "mandrill-api": "~1.0.41",
@@ -22,8 +23,7 @@
     "q": "~1.0.1",
     "request": "~2.40.0",
     "request-debug": "~0.1.1",
-    "satellizer": "~0.9.0",
-    "connect-wwwhisper": "0.1.11"
+    "satellizer": "~0.9.0"
   },
   "devDependencies": {
     "grunt-concurrent": "^1.0.0",
