--- a/bower.json
+++ b/bower.json
@@ -33,10 +33,11 @@
     "angular-ui-utils": "bower-highlight",
     "mixpanel": "~2.5.1",
     "angular-mixpanel": "~1.1.0",
-    "angular-google-maps": "~2.1.3"
+    "angular-google-maps": "~2.1.3",
+    "lodash": "~3.9.3"
   },
   "resolutions": {
-    "angular": "1.4.0",
+    "angular": "~1.3.5",
     "mixpanel": "~2.5.1"
   }
 }
