--- a/bower.json
+++ b/bower.json
@@ -33,8 +33,7 @@
     "angular-ui-utils": "bower-highlight",
     "mixpanel": "~2.5.1",
     "angular-mixpanel": "~1.1.0",
-    "angular-google-maps": "~2.1.3",
-    "lodash": "~3.9.3"
+    "ngmap": "~1.7.11"
   },
   "resolutions": {
     "angular": "~1.3.5",
