--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,7 @@
     "ngmap": "~1.7.11"
   },
   "resolutions": {
-    "angular": "~1.3.5",
+    "angular": "1.4.1",
     "mixpanel": "~2.5.1"
   }
 }
