added sanitize to bower

--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "angular-ui-utils": "bower-highlight",
     "mixpanel": "~2.5.1",
     "angular-mixpanel": "~1.1.0",
-    "ngmap": "~1.7.11"
+    "ngmap": "~1.7.11",
+    "angular-sanitize": "~1.4.1"
   },
   "resolutions": {
     "angular": "1.4.1",
