--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ coverage
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
+app/styles/style.css
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
@@ -30,5 +31,5 @@ dist
 .c9
 .idea
 
-# Forza theme
+# theme
 theme
