--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "angular-bootstrap": "~0.12.0",
     "jquery": "~2.1.3",
     "iCheck": "~1.0.2",
-    "sweetalert": "https://github.com/t4t5/sweetalert.git#~0.2.1",
+    "sweetalert": "https://github.com/t4t5/sweetalert.git#~1.0.1",
     "angular-notify": "~2.0.2",
     "sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
     "bootstrap": "~3.3.0",
@@ -36,10 +36,11 @@
     "ngmap": "~1.7.11",
     "angular-sanitize": "~1.4.1",
     "angular-ui-select": "~0.12.0",
-    "angular-chart.js": "~0.7.2"
+    "angular-chart.js": "~0.7.2",
+    "angular-h-sweetalert": "~1.4.5"
   },
   "resolutions": {
-    "angular": "1.4.1",
+    "angular": "1.4.2",
     "mixpanel": "~2.5.1"
   }
 }
