--- a/bower.json
+++ b/bower.json
@@ -37,10 +37,14 @@
     "angular-sanitize": "~1.4.1",
     "angular-ui-select": "~0.12.0",
     "angular-chart.js": "~0.7.2",
-    "angular-h-sweetalert": "~1.4.5"
+    "angular-h-sweetalert": "~1.4.5",
+    "angulartics-google-analytics": "~0.1.0",
+    "angulartics": "~0.19.0"
   },
   "resolutions": {
     "angular": "1.4.2",
-    "mixpanel": "~2.5.1"
+    "mixpanel": "~2.5.1",
+    "angulartics": "~0.19.0",
+    "waypoints": "~3.1.1"
   }
 }
