--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,8 @@
     "angular-chart.js": "~0.7.2",
     "angular-h-sweetalert": "~1.4.5",
     "angulartics-google-analytics": "~0.1.0",
-    "angulartics": "~0.19.0"
+    "angulartics": "~0.19.0",
+    "stacktrace-js": "~0.6.4"
   },
   "resolutions": {
     "angular": "1.4.2",
