--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "db": {
       "key": "be406a43-5cc1-425f-9545-23bd75ec6cfc",
       "collections": {
-        "users": "communities",
-        "communities": "communities"
+        "users": "communities-dev",
+        "communities": "communities-dev"
       }
     },
     "linkedin": {
