--- a/bower.json
+++ b/bower.json
@@ -33,14 +33,14 @@
     "angular-ui-utils": "bower-highlight",
     "mixpanel": "~2.5.1",
     "angular-mixpanel": "~1.1.0",
-    "ngmap": "~1.7.11",
     "angular-sanitize": "~1.4.1",
     "angular-ui-select": "~0.12.0",
     "angular-chart.js": "~0.7.2",
     "angular-h-sweetalert": "~1.4.5",
     "angulartics-google-analytics": "~0.1.0",
     "angulartics": "~0.19.0",
-    "stacktrace-js": "~0.6.4"
+    "stacktrace-js": "~0.6.4",
+    "angular-google-maps-native": "~1.3.0"
   },
   "resolutions": {
     "angular": "1.4.2",
