--- a/bower.json
+++ b/bower.json
@@ -46,6 +46,7 @@
     "angular": "1.4.3",
     "mixpanel": "~2.5.1",
     "angulartics": "~0.19.0",
-    "waypoints": "~3.1.1"
+    "waypoints": "~3.1.1",
+    "sweetalert": ">=1.1.0"
   }
 }
