--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "satellizer": "~0.9.0"
   },
   "devDependencies": {
+    "bower": "~1.3.12",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
@@ -48,6 +49,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "bower install"
   }
 }
