--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,8 @@
     "angulartics-google-analytics": "~0.1.0",
     "angulartics": "~0.19.0",
     "stacktrace-js": "~0.6.4",
-    "angular-google-maps-native": "~1.3.0"
+    "angular-google-maps-native": "~1.3.0",
+    "awesome-bootstrap-checkbox": "~0.3.5"
   },
   "resolutions": {
     "angular": "1.4.4",
