--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "node": "0.12.4"
   },
   "scripts": {
-    //"test": "grunt test",
+    "test": "grunt test",
     "postinstall": "bower install"
   }
 }
