fixed location nav issue

--- a/bower.json
+++ b/bower.json
@@ -15,33 +15,34 @@
   "appPath": "app",
   "dependencies": {
     "angular": "~1.3.5",
-    "angular-ui-router": "~0.2.12",
     "angular-bootstrap": "~0.12.0",
-    "jquery": "~2.1.3",
-    "iCheck": "~1.0.2",
-    "sweetalert": "https://github.com/t4t5/sweetalert.git#~1.0.1",
-    "angular-notify": "~2.0.2",
-    "sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
-    "bootstrap": "~3.3.0",
-    "fontawesome": "~4.3.0",
-    "metisMenu": "~1.1.2",
-    "animate.css": "https://github.com/daneden/animate.css.git#~3.2.0",
-    "underscore": "~1.5.2",
-    "satellizer": "~0.11.3",
-    "moment": "~2.8.3",
-    "es5-shim": "~4.0.3",
-    "angular-ui-utils": "bower-highlight",
-    "mixpanel": "~2.5.1",
-    "angular-mixpanel": "~1.1.0",
-    "angular-sanitize": "~1.4.1",
-    "angular-ui-select": "~0.12.0",
     "angular-chart.js": "~0.7.2",
-    "angular-h-sweetalert": "~1.4.5",
-    "angulartics-google-analytics": "~0.1.0",
-    "angulartics": "~0.19.0",
-    "stacktrace-js": "~0.6.4",
     "angular-google-maps-native": "~1.3.0",
-    "awesome-bootstrap-checkbox": "~0.3.5"
+    "angular-h-sweetalert": "~1.4.5",
+    "angular-knowtify": "*",
+    "angular-mixpanel": "~1.1.0",
+    "angular-notify": "~2.0.2",
+    "angular-sanitize": "~1.4.1",
+    "angular-ui-router": "~0.2.12",
+    "angular-ui-select": "~0.12.0",
+    "angular-ui-utils": "bower-highlight",
+    "angulartics": "~0.19.0",
+    "angulartics-google-analytics": "~0.1.0",
+    "animate.css": "https://github.com/daneden/animate.css.git#~3.2.0",
+    "awesome-bootstrap-checkbox": "~0.3.5",
+    "bootstrap": "~3.3.0",
+    "es5-shim": "~4.0.3",
+    "fontawesome": "~4.3.0",
+    "iCheck": "~1.0.2",
+    "jquery": "~2.1.3",
+    "metisMenu": "~1.1.2",
+    "mixpanel": "~2.5.1",
+    "moment": "~2.8.3",
+    "satellizer": "~0.11.3",
+    "sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
+    "stacktrace-js": "~0.6.4",
+    "sweetalert": "https://github.com/t4t5/sweetalert.git#~1.0.1",
+    "underscore": "~1.5.2"
   },
   "resolutions": {
     "angular": "1.4.5",
