--- a/bower.json
+++ b/bower.json
@@ -42,7 +42,8 @@
     "sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
     "stacktrace-js": "~0.6.4",
     "sweetalert": "https://github.com/t4t5/sweetalert.git#~1.0.1",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "angular-file-upload": "~2.1.4"
   },
   "resolutions": {
     "angular": "1.4.6",
